add cancel button to invoice admin panel

--- a/invoice/templates/admin/custom/invoice_changeform.html
+++ b/invoice/templates/admin/custom/invoice_changeform.html
@@ -2,5 +2,6 @@
 {{ block.super }}
 <div class="submit-row">
   <input type="submit" value="تسویه فاکتور" name="checkout_invoice" />
+  <input type="submit" value="لغو فاکتور" name="cancel_invoice" style="background:var(--delete-button-bg)"/>
 </div>
 {% endblock %}
